trunk/plugins/themes/collaboratorium-theme/docroot/_diffs/css/style.css
/* ... */
#logo { width:223px; padding-top:13px;  }
#top-left ul { margin:0 0 0 60px; width:500px; }
#top-left li { float:left; list-style:none; height:22px; padding-right:4px; margin-right:5px; }
#top-left li a { display:inline-block; height:18px; padding:4px 3px 0 7px; font-family: "gloriola-web-1","gloriola-web-2"; font-size:14px; font-style:normal; font-weight:600; color:#564e41;}  /* Gloriola std - semibold */
#top-left li:hover { background:url(../images/menu_cap-r.png) no-repeat right; color:#fff; }
#top-left li:hover a { background:url(../images/menu_cap-l.png) no-repeat; color:#fff; }
#top-left li a:hover { color:#fff;  }
#top-left li.c a { color:#fff; }    /* C is for "current" page - add class="c" to li of menu item of the current page  */

/* top right  */
#top-right { float:right; width:413px; height:89px; background:url(../images/header_nav-bg.gif) right no-repeat; }
/* collab additions */
#loginContainer { float:left; width:160px; }
#loginStatus {position: relative; height: 48px;};
#login { width:160px; height:28px;}
#login li { float:left; list-style:none; width:73px; height:28px; text-align:center; }
#login #signin { background:url(../images/header_btn-signin.png) no-repeat; margin-right:5px;}
#login #reg { background:url(../images/header_btn-reg.png) no-repeat;}
#login #signin a, #login #reg a {display:inline-block; padding-top:8px; font-family: "gloriola-web-1","gloriola-web-2"; font-size:14px; font-style:normal; font-weight:400; color:#fff;}  /* Gloriola std - regular */
#login #signin a:hover, #login #reg a:hover { font-family: "gloriola-web-1","gloriola-web-2"; font-size:14px; font-style:normal; font-weight:400; color:#000;}  /* Gloriola std - regular */
#menu { float:right; width:251px; margin-top:10px;}
#menu ul { margin-left: 20px;}
#menu li { float:left; list-style:none; }
#menu li a { padding:0 0 0 14px; font-family: "gloriola-web-1","gloriola-web-2";  font-size:14px; font-style:normal; font-weight:400; color:#564e41; }  /* Gloriola std - regular */
#menu li:first-child a { padding:0; }
#menu li a:hover { color:#e76118; }
#menu li.c a { color:#e76118; }    /* C is for "current" page - add class="c" to li of menu item of the current page  */
#menu form { margin:34px 0 0 15px; }
#searchinput { float:left; width:180px; height:25px; padding:2px 0 0 8px; font:12px "Lucida Sans Unicode", "Lucida Grande", Arial, Helvetica, sans-serif; color:#7c7c7b; background:#fff; border:1px solid #bcb6b1; }
#searchinput.nofocus {background:url(../images/search_word.gif) no-repeat scroll 4px 2px #FFF}
#searchsubmit { width:32px; height:29px; text-align:center; vertical-align:middle; background:url(../images/header_btn-go.png) no-repeat; border:none; font-family: "gloriola-web-1","gloriola-web-2"; font-size:14px; font-style:normal; font-weight:600; color:#fff; cursor:pointer; }
#searchsubmit:hover { color:#000; }





/*  HOMEPAGE "BOX"  ----------------------- */

#box { background:url(../images/box_border.png) no-repeat; margin-top:135px; width:980px; height:381px;}

/* sliding window (left side) */
#boxwin { float:left; background:#fff; margin:11px 0 0 12px; width:578px; height:351px; }
#boxwin ul { margin:20px 0; }
#boxwin ul.nobr { margin:0; }
#boxwin ul li, #boxwin ol ul li { list-style-image:url(../images/bullet.gif); margin-bottom:5px; }
#boxwin ol { margin-left:30px; }
#boxwin ol li { margin-bottom:15px; }
#boxwin a { background:url(../images/link_bg.gif) repeat-x; display:inline-block; height:30px; padding:0 5px 0 5px; border-bottom:2px solid #67ac5c; font-family: "bree-1","bree-2"; font-size:24px; font-style:normal; font-weight:700; color:#67ac5c;}  /* Bree - bold - 25.5px */
#boxwin a:hover { background:#67ac5c; color:#fff; } /*  color:#e76118; border-bottom:2px solid #e76118;  */
#boxwin #screen1 { padding:45px 71px 0 48px; height:305px; background:#fff; border:1px solid #9ac191; font-family: "gloriola-display-thin-1","gloriola-display-thin-2"; font-size:44px; line-height:50px; font-style:normal; font-weight:200; color:#0b97c0; }
#boxwin #screen2 { display:none; padding:30px 50px 0 44px; height:320px; background:#fff; border:1px solid #9ac191; font-family: "gloriola-web-1","gloriola-web-2"; font-size:25px; line-height:35px; font-style:normal; font-weight:200; color:#339dc0; }
#boxwin #screen3 { display:none; padding:40px 50px 0 40px; height:310px; background:#fff; border:1px solid #9ac191; font-family: "gloriola-web-1","gloriola-web-2"; font-size:25px; line-height:35px; font-style:normal; font-weight:200; color:#339dc0; }
#boxwin #screen4 { display:none; padding:40px 50px 0 48px; height:310px; background:#fff; border:1px solid #9ac191; font-family: "gloriola-web-1","gloriola-web-2"; font-size:25px; line-height:35px; font-style:normal; font-weight:200; color:#339dc0; }
#boxwin #screen5 { display:none; padding:27px 26px 0 38px; height:323px; background:#fff; border:1px solid #9ac191; font-family: "gloriola-web-1","gloriola-web-2"; font-size:25px; line-height:35px; font-style:normal; font-weight:200; color:#339dc0; }

/* navigation (right side) */
#boxnav { float:left; position:relative; background:url(../images/box_nav-bg.gif) no-repeat right #fff; margin:11px 0 0 0; width:370px; height:351px;}
#boxnav li { position:absolute; z-index:33; list-style:none; width:374px; height:80px; }
#boxnav li a { width:265px; height:80px; padding-left:112px; display:inline-block; font:15px/24px Georgia, "Times New Roman", Times, serif; color:#000;}
#boxnav li a span { font-family: "bree-1","bree-2"; font-size:17px; font-style:normal; font-weight:400; color:#e76118; border-bottom:1px solid #e76118;}  /* Bree - regular */
#boxnav li a:hover, #boxnav li a:hover span { color:#fff; cursor:pointer; border:none;}
#boxnav li a.activeSlide, #boxnav li a.activeSlide span { color:#fff; border:none;}

#boxnav li#learn { top:30px; left:-19px; }
#boxnav li#explore { top:105px; left:-19px; }
#boxnav li#get { top:180px; left:-19px; }
#boxnav li#connect { top:256px; left:-19px; }
/* ... */

